# Dados-do-excel-para-o-banco

./: erros.txt  erros2.txt  main.py  pyproject.toml
db/mysql/: __init__.py
db/mysql/models/: __init__.py  campo.py  campo_config.py  campo_spider.py  debito.py  debito_campos_boleto.py  imovel.py  proprietario.py  proprietarios.py  spider.py
dtos/: iptu.py
